--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,15 @@ before_install:
   - docker build -t dharani265/react-nodejs-practise  -f Dockerfile.dev .
 script:
   - docker run -e CI=true dharani265/react-nodejs-practise  npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "React-nodejs-practise"
+  env: "Reactnodejspractise-env"
+  bucket_name: "elasticbeanstalk-us-east-2-158227982782"
+  bucket_path: "React-nodejs-practise"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY 
