--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,26 @@ services:
     #build: .
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     #specifically for windows below command needs to be added for React app
     environment:
      - CHOKIDAR_USEPOLLING=true
      - CI=true
     ports:
-      - "3000:3000"
+    # -"3000:3000"
+      - "80:80"
     volumes:
       - /home/node/app/node_modules 
       - .:/home/node/app
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    environment:
-     - CHOKIDAR_USEPOLLING=true
-     - CI=true
-    volumes:
-      - home/node/app/node_modules
-      - .:/homr/node/app/
-    command: ["npm", "run", "test"]    
+  # tests:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.dev
+  #   environment:
+  #    - CHOKIDAR_USEPOLLING=true
+  #    - CI=true
+  #   volumes:
+  #     - home/node/app/node_modules
+  #     - .:/homr/node/app/
+  #   command: ["npm", "run", "test"]    
 
